load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
  name = "sqlite",
  strip_prefix = "sqlite-amalgamation-3410200",
  urls = ["https://www.sqlite.org/2023/sqlite-amalgamation-3410200.zip"],
  build_file = "//third_party/sqlite:BUILD.bazel",
  sha256 = "01df06a84803c1ab4d62c64e995b151b2dbcf5dbc93bbc5eee213cb18225d987",
)
